--- a/ministries-ministries.html
+++ b/ministries-ministries.html
@@ -72,7 +72,18 @@ handout: false
 			</div>
 			<div>
 				<label for="">Photo:</label>
-				<input type="file">
+				<div class="file-dragdrop-img">
+					<label for="">
+						<img src="" alt="">
+						<span>
+							<i class="fa fa-upload"></i>
+							Drop or click to upload new photo.
+						</span>
+						<input type="file">
+					</label>
+					
+				</div>
+				
 			</div>
 			<div>
 				<label for="">Content::</label>
