Markup for Design settings, Church Settings, welcome page, login, guide slide module

--- a/ministries-ministries.html
+++ b/ministries-ministries.html
@@ -86,8 +86,8 @@ handout: false
 				
 			</div>
 			<div>
-				<label for="">Content::</label>
-				<textarea name="" id="InputContent" cols="30" rows="10"></textarea>
+				<label for="">Content:</label>
+				<textarea name="" class="SimpleMDE" id="InputContent" cols="30" rows="10"></textarea>
 			</div>
 
 			<div class="controllers">
