--- a/settings-church.html
+++ b/settings-church.html
@@ -1,12 +1,9 @@
 ---
 layout: default
-body-class: "church-settings settings"
-title: "Church settings"
+body-class: "settings"
+title: "Church Details"
 header: simple
 ---
-{% comment %} 
-	Documentation:
-{% endcomment %}
 <div class="card-secundary categories">
 	<h2>Bible Baptist Church</h2>
 	<div class="wrapper">
@@ -16,7 +13,7 @@ header: simple
 				<input type="text">
 			</div>
 			<div class="upload-image">
-				<label for="">Church logo</label>
+				<label for="">Thumbnail</label>
 				<img src="" alt="">
 				<div class="dropbox">
 					<p>
@@ -27,20 +24,32 @@ header: simple
 				</div>
 			</div>
 			<div>
+				<label for="">Password</label>
+				<input type="password">
+			</div>
+			<div>
+				<label for="">Church URL</label>
+				<input type="url">
+			</div>
+			<div>
 				<label for="">Church Address</label>
 				<input type="text">
 			</div>
 			<div>
-				<label for="">Church phone</label>
+				<label for="">Church Phone</label>
 				<input type="tel">
 			</div>
 			<div>
-				<label for="">Church website</label>
-				<input type="url">
+				<label for="">Church Email</label>
+				<input type="email">
 			</div>
 			<div>
-				<label for="">Church-wide password</label>
-				<input type="password">
+				<label for="">Service Times</label>
+				<input type="text">
+			</div>
+			<div>
+				<label for="">Pastor Name</label>
+				<input type="text">
 			</div>
 		</div> <!-- /.form -->
 	</div> <!-- /.wrapper -->
