--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ header: simple
 	<h2>Common Tasks:</h2>
 	<ul>
 		<li>
-			<a href="#">
+			<a href="{{site.baseurl}}/settings-design.html">
 				<img src="{{site.baseurl}}/assets/images/dashboard/changeDesignSettings.svg">
 				Change Design Settings
 			</a>
