--- a/ministries-leaders.html
+++ b/ministries-leaders.html
@@ -1,12 +1,11 @@
 ---
 layout: default
 body-class: home
-title: "Ministries / Ministries Pages"
+title: "Ministries / Leaders"
 filters:
 #- All 
-addOption: "Add Ministry"
+addOption: "Add Leader"
 handout: false
-guide: true
 ---
 <div class="card-main">
 	
@@ -23,16 +22,16 @@ guide: true
 				<input type="checkbox">
 			</td> -->
 			<td class="title">
-				<a href="#">Sunday School</a>
+				<a href="#">Ryan Hayden</a>
 				<!-- <span>Health Needs</span> -->
 			</td>
 			<td>
-				<span>Description:</span>
-				The descriptions Lorem ipsum dolor sit.…
+				<span>E-mail:</span>
+				email@domain.com
 			</td>
 			<td>
-				<span>Leader:</span>
-				Pastor
+				<span>Phone:</span>
+				00 0000 0000
 			</td>
 			<td class="actions">
 				<div class="desktop">
@@ -60,19 +59,11 @@ guide: true
 		<h2>Add A Ministry</h2>
 		<form action="">
 			<div class="">
-				<label for="">Title:</label>
-				<input type="text" value="Awana">
-			</div>
-			<div>
-				<label for="">Description:</label>
+				<label for="">Name:</label>
 				<input type="text" value="">
 			</div>
 			<div>
-				<label for="">Leader:</label>
-				<input type="text" value="Pastor">
-			</div>
-			<div>
-				<label for="">Photo:</label>
+				<label for="">Thumbnail:</label>
 				<div class="file-dragdrop-img">
 					<label for="">
 						<img src="" alt="">
@@ -82,9 +73,15 @@ guide: true
 						</span>
 						<input type="file">
 					</label>
-					
 				</div>
-				
+			</div>
+			<div class="">
+				<label for="">Email:</label>
+				<input type="email" value="">
+			</div>
+			<div>
+				<label for="">Phone:</label>
+				<input type="tel" value="">
 			</div>
 			<div>
 				<label for="">Content:</label>
@@ -101,7 +98,7 @@ guide: true
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>Ministries / Ministries Pages </h2> 
+	<h2>Ministries / Ministries Leaders</h2> 
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
