--- a/photos.html
+++ b/photos.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 body-class: home
-title: "Events"
+title: "Photos/Albums"
 filters:
 #- All 
-addOption: "Event"
+addOption: "Album"
 handout: false
 guide: true
 ---
@@ -23,7 +23,7 @@ guide: true
 				<input type="checkbox">
 			</td> -->
 			<td class="title">
-				<a href="#">Event Name</a>
+				<a href="#">Album Name</a>
 				<!-- <span>Health Needs</span> -->
 			</td>
 			<td>
@@ -57,66 +57,49 @@ guide: true
 <section class="addModule" id="addModule">
 	<div class="shadow" id="addModuleOverlay"></div>
 	<div class="content"id="addModuleContent">
-		<h2>Add A Ministry</h2>
+		<h2>Add Album</h2>
 		<form action="">
 			<div class="">
-				<label for="">Name:</label>
+				<label for="">Title:</label>
 				<input type="text" value="">
 			</div>
 			<div class="">
 				<label for="">Description::</label>
 				<textarea name="" id=""></textarea>
 			</div>
-			<div>
-				<label for="">Featured Image:</label>
-				<div class="file-dragdrop-img">
-					<label for="">
-						<img src="" alt="">
-						<span>
-							<i class="fa fa-upload"></i>
-							Drop or click to upload new photo.
-						</span>
-						<input type="file">
-					</label>
-				</div>
-			</div>
 			<div class="">
-				<label for="">Location:</label>
+				<label for="">Ministry:</label>
 				<input type="text" value="">
-			</div>
-			<div>
-				<label for="">Frequency:</label>
-				<select name="" id="">
-					<option value="">Occurs Once</option>
-					<option value="">Weekly</option>
-					<option value="">Monthly</option>
-				</select>
 			</div>
 			<div class="form-date-time">
 				<label for="">Start Date/Time:</label>
 				<input type="date"><i class="fa fa-calendar"></i>
-				<input type="time"><i class="fa fa-clock-o"></i>
 			</div>
-			<div class="form-date-time">
-				<label for="">End Date/Time:</label>
-				<input type="date"><i class="fa fa-calendar"></i>
-				<input type="time"><i class="fa fa-clock-o"></i>
-			</div>
-			<div>
-				<label for="">Ministry:</label>
-				<select name="" id="">
-					<option value=""></option>
-				</select>
-			</div>
-			<div>
-				<label for="">Contact:</label>
-				<select name="" id="">
-					<option value=""></option>
-				</select>
-			</div>
-			<div>
-				<label for="">Body:</label>
-				<textarea name="" class="SimpleMDE" id="InputContent" cols="30" rows="10"></textarea>
+			<div class="upload-album">
+				<label for="">Photos</label>
+				
+				<input type="file" name="Add photos" id="form-upload-album">
+				<label for="form-upload-album" class="button">
+					<i class="fa fa-upload"></i>
+					Add photos
+				</label>
+
+				<div class="photos">
+					{% for item in (1..6) %}
+					<figure style="background-image: url('http://via.placeholder.com/177x177')">
+						<div class="actions">
+							<button class="fa fa-trash-o"></button>
+							<button class="fa fa-search-plus upload-album-open"></button>
+						</div>
+						<div class="fullscreen">
+							<div class="container">
+								<button class="fa fa-times upload-album-fullsc-close"></button>
+								<img src="http://via.placeholder.com/177x177" alt="">
+							</div>
+						</div>
+					</figure>
+					{% endfor %}
+				</div>
 			</div>
 
 			<div class="controllers">
