--- a/ministries-leaders.html
+++ b/ministries-leaders.html
@@ -6,6 +6,7 @@ filters:
 #- All 
 addOption: "Add Leader"
 handout: false
+guide: true
 ---
 <div class="card-main">
 	
@@ -56,7 +57,7 @@ handout: false
 <section class="addModule" id="addModule">
 	<div class="shadow" id="addModuleOverlay"></div>
 	<div class="content"id="addModuleContent">
-		<h2>Add A Ministry</h2>
+		<h2>Add A Leader</h2>
 		<form action="">
 			<div class="">
 				<label for="">Name:</label>
