--- a/pages-regular.html
+++ b/pages-regular.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 body-class: home
-title: "Events"
+title: "About Pages / Regular About Pages"
 filters:
 #- All 
-addOption: "Event"
+addOption: "Page"
 handout: false
 guide: true
 ---
@@ -23,16 +23,12 @@ guide: true
 				<input type="checkbox">
 			</td> -->
 			<td class="title">
-				<a href="#">Event Name</a>
+				<a href="#">Page Title</a>
 				<!-- <span>Health Needs</span> -->
 			</td>
 			<td>
-				<span>Description:</span>
+				<span>Decription:</span>
 				The descriptions Lorem ipsum dolor sit.…
-			</td>
-			<td>
-				<span>Date:</span>
-				01/01/2018
 			</td>
 			<td class="actions">
 				<div class="desktop">
@@ -57,15 +53,11 @@ guide: true
 <section class="addModule" id="addModule">
 	<div class="shadow" id="addModuleOverlay"></div>
 	<div class="content"id="addModuleContent">
-		<h2>Add A Ministry</h2>
+		<h2>Add A Page</h2>
 		<form action="">
 			<div class="">
-				<label for="">Name:</label>
+				<label for="">Title:</label>
 				<input type="text" value="">
-			</div>
-			<div class="">
-				<label for="">Description::</label>
-				<textarea name="" id=""></textarea>
 			</div>
 			<div>
 				<label for="">Featured Image:</label>
@@ -81,41 +73,11 @@ guide: true
 				</div>
 			</div>
 			<div class="">
-				<label for="">Location:</label>
-				<input type="text" value="">
+				<label for="">Description:</label>
+				<textarea name="" id=""></textarea>
 			</div>
 			<div>
-				<label for="">Frequency:</label>
-				<select name="" id="">
-					<option value="">Occurs Once</option>
-					<option value="">Weekly</option>
-					<option value="">Monthly</option>
-				</select>
-			</div>
-			<div class="form-date-time">
-				<label for="">Start Date/Time:</label>
-				<input type="date"><i class="fa fa-calendar"></i>
-				<input type="time"><i class="fa fa-clock-o"></i>
-			</div>
-			<div class="form-date-time">
-				<label for="">End Date/Time:</label>
-				<input type="date"><i class="fa fa-calendar"></i>
-				<input type="time"><i class="fa fa-clock-o"></i>
-			</div>
-			<div>
-				<label for="">Ministry:</label>
-				<select name="" id="">
-					<option value=""></option>
-				</select>
-			</div>
-			<div>
-				<label for="">Contact:</label>
-				<select name="" id="">
-					<option value=""></option>
-				</select>
-			</div>
-			<div>
-				<label for="">Body:</label>
+				<label for="">Content:</label>
 				<textarea name="" class="SimpleMDE" id="InputContent" cols="30" rows="10"></textarea>
 			</div>
 
@@ -129,7 +91,7 @@ guide: true
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>{{page.title}}</h2> 
+	<h2>Ministries / Ministries Leaders</h2> 
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
