--- a/events.html
+++ b/events.html
@@ -57,14 +57,14 @@ guide: true
 <section class="addModule" id="addModule">
 	<div class="shadow" id="addModuleOverlay"></div>
 	<div class="content"id="addModuleContent">
-		<h2>Add A Ministry</h2>
+		<h2>Add An Event</h2>
 		<form action="">
 			<div class="">
 				<label for="">Name:</label>
 				<input type="text" value="">
 			</div>
 			<div class="">
-				<label for="">Description::</label>
+				<label for="">Description:</label>
 				<textarea name="" id=""></textarea>
 			</div>
 			<div>
