--- a/ministries-leaders.html
+++ b/ministries-leaders.html
@@ -4,7 +4,7 @@ body-class: home
 title: "Ministries / Leaders"
 filters:
 #- All 
-addOption: "Add Leader"
+addOption: "Leader"
 handout: false
 guide: true
 ---
