--- a/ministries-ministries.html
+++ b/ministries-ministries.html
@@ -4,7 +4,7 @@ body-class: home
 title: "Ministries / Ministries Pages"
 filters:
 #- All 
-addOption: "Add Ministry"
+addOption: "Ministry"
 handout: false
 guide: true
 ---
@@ -64,14 +64,6 @@ guide: true
 				<input type="text" value="Awana">
 			</div>
 			<div>
-				<label for="">Description:</label>
-				<input type="text" value="">
-			</div>
-			<div>
-				<label for="">Leader:</label>
-				<input type="text" value="Pastor">
-			</div>
-			<div>
 				<label for="">Photo:</label>
 				<div class="file-dragdrop-img">
 					<label for="">
@@ -82,12 +74,18 @@ guide: true
 						</span>
 						<input type="file">
 					</label>
-					
 				</div>
-				
 			</div>
 			<div>
-				<label for="">Content:</label>
+				<label for="">Description:</label>
+				<input type="text" value="">
+			</div>
+			<div>
+				<label for="">Leader:</label>
+				<input type="text" value="Pastor">
+			</div>
+			<div>
+				<label for="">Body:</label>
 				<textarea name="" class="SimpleMDE" id="InputContent" cols="30" rows="10"></textarea>
 			</div>
 
