--- a/pages-beliefs.html
+++ b/pages-beliefs.html
@@ -4,7 +4,7 @@ body-class:
 title: "About Pages / Beliefs"
 filters:
 #- All 
-addOption: "Beliefs"
+addOption: "Belief"
 handout: false
 guide: true
 ---
@@ -58,7 +58,7 @@ guide: true
 <section class="addModule" id="addModule">
 	<div class="shadow" id="addModuleOverlay"></div>
 	<div class="content"id="addModuleContent">
-		<h2>Add A Leader</h2>
+		<h2>Add A Belief</h2>
 		<form action="">
 			<div class="">
 				<label for="">Name:</label>
