--- a/pages-regular.html
+++ b/pages-regular.html
@@ -77,7 +77,7 @@ guide: true
 				<textarea name="" id=""></textarea>
 			</div>
 			<div>
-				<label for="">Content:</label>
+				<label for="">Body:</label>
 				<textarea name="" class="SimpleMDE" id="InputContent" cols="30" rows="10"></textarea>
 			</div>
 
