--- a/photos.html
+++ b/photos.html
@@ -64,7 +64,7 @@ guide: true
 				<input type="text" value="">
 			</div>
 			<div class="">
-				<label for="">Description::</label>
+				<label for="">Description:</label>
 				<textarea name="" id=""></textarea>
 			</div>
 			<div class="">
