--- a/settings-design.html
+++ b/settings-design.html
@@ -8,14 +8,26 @@ header: simple
 	<h2>Bible Baptist Church</h2>
 	<div class="wrapper">
 		<div class="form">
-			<div>
-				<label for="">The webhook URL</label>
-				<input type="text">
-			</div>
-			
-			<div>
-				<label for="">Simple Church Tools ID </label>
-				<input type="text">
+			<div class="form-themes">
+				<p>Theme</p>
+				<label>
+					<input type="radio" name="theme" checked>
+					<span>
+						<figure style="background-image: url(/assets/images/templates-previews/salem.jpg)">
+							<div class="overlay"></div>
+						</figure>
+						<p>Salem</p>
+					</span>
+				</label>
+				<label>
+					<input type="radio" name="theme">
+					<span>
+						<figure style="background-image: url(/assets/images/templates-previews/phoenix.jpg)">
+							<div class="overlay"></div>
+						</figure>
+						<p>Phoenix</p>
+					</span>
+				</label>
 			</div>
 			
 			<div class="form-theme-fonts">
