--- a/settings-church.html
+++ b/settings-church.html
@@ -112,7 +112,8 @@ header: simple
 </div>
 
 <script>
-	// This Script is only show how the button and Popup module should work
+	// This Script works only as a prototype
+	// It should only pop-up if the user changes the "Church URL".
 	var popupMessage = document.getElementById("popup-message");
 	var buttonconfirmsaveChanges = document.getElementById('button-confirm-saveChanges');
 	var buttonSaveChanges = document.getElementById('button-saveChanges');
