--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ header: simple
 			</a>
 		</li>
 		<li>
-			<a href="#">
+			<a href="/settings-users.html">
 				<img src="{{site.baseurl}}/assets/images/dashboard/manageAdministrators.svg">
 				Manage Administrators
 			</a>
