--- a/welcomePage-children.html
+++ b/welcomePage-children.html
@@ -8,7 +8,7 @@ step: 4
 ---
 {% include welcomePage-steps.html %}
 <div class="card-secundary categories">
-	<h2>Main Messaging</h2>
+	<h2>Children & teens</h2>
 	<div class="wrapper">
 		<div class="form">
 			<div>
