--- a/welcomePage-location.html
+++ b/welcomePage-location.html
@@ -9,7 +9,7 @@ step: 5
 {% include welcomePage-steps.html %}
 
 <div class="card-secundary categories">
-	<h2>Main Messaging</h2>
+	<h2>Location</h2>
 	<div class="wrapper">
 		<div class="form">
 			<div>
