--- a/welcomePage-services.html
+++ b/welcomePage-services.html
@@ -8,7 +8,7 @@ step: 2
 ---
 {% include welcomePage-steps.html %}
 <div class="card-secundary categories">
-	<h2>Main Messaging</h2>
+	<h2>Services</h2>
 	<div class="wrapper">
 		<div class="form">
 			<div>
