--- a/welcomePage-expect.html
+++ b/welcomePage-expect.html
@@ -9,7 +9,7 @@ step: 3
 {% include welcomePage-steps.html %}
 
 <div class="card-secundary categories">
-	<h2>Main Messaging</h2>
+	<h2>What to expect</h2>
 	<div class="wrapper">
 		<div class="form">
 			<div>
