added welcome page help text

--- a/welcomePage-children.html
+++ b/welcomePage-children.html
@@ -8,14 +8,14 @@ step: 4
 ---
 {% include welcomePage-steps.html %}
 <div class="card-secundary categories">
-	<h2>Children & teens</h2>
+	<h2>Children &amp; teens</h2>
 	<div class="wrapper">
 		<div class="form">
 			<div>
 				<label for="">5. What do you do for children and teens?  Describe in one or two paragraphs.</label>
 				<textarea name="" class="SimpleMDE"></textarea>
 			</div>
-			
+
 			<div>
 				<label for="">5a. Provide photos of children partaking in the ministries of your church.</label>
 				<textarea name="" class="SimpleMDE"></textarea>
@@ -23,7 +23,7 @@ step: 4
 		</div> <!-- /.form -->
 		<div class="guide">
 				<h3>Need some help?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh ut augue eleifend varius. Vivamus facilisis massa non maximus lobortis. Ut vulputate faucibus erat, ut fermentum ipsum luctus quis. Quisque bibendum blandit lectus in volutpat. Nullam consequat posuere elementum. Aliquam ac risus libero. Integer at varius tellus. Proin mattis lobortis turpis tempor suscipit.</p>
+				<p>People care deeply about their kids and want to know what your church can do for their children and how your church will do it.</p>
 		</div>
 	</div> <!-- /.wrapper -->
 </div> <!-- /.card-secundary.categories-->
@@ -35,7 +35,7 @@ step: 4
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>The Welcome Page</h2> 
+	<h2>The Welcome Page</h2>
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
