--- a/welcomePage-expect.html
+++ b/welcomePage-expect.html
@@ -20,7 +20,7 @@ step: 3
 		</div> <!-- /.form -->
 		<div class="guide">
 				<h3>Need some help?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh ut augue eleifend varius. Vivamus facilisis massa non maximus lobortis. Ut vulputate faucibus erat, ut fermentum ipsum luctus quis. Quisque bibendum blandit lectus in volutpat. Nullam consequat posuere elementum. Aliquam ac risus libero. Integer at varius tellus. Proin mattis lobortis turpis tempor suscipit.</p>
+				<p>The previous services section is about your services is like.  Consider this a place to tell people how God can change their lives through the ministry of your church.</p>
 		</div>
 	</div> <!-- /.wrapper -->
 </div> <!-- /.card-secundary.categories-->
@@ -32,7 +32,7 @@ step: 3
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>The Welcome Page</h2> 
+	<h2>The Welcome Page</h2>
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
