--- a/welcomePage-messaging.html
+++ b/welcomePage-messaging.html
@@ -22,7 +22,7 @@ step: 1
 				<label for="">1. Describe your church in one very short and simple sentence.</label>
 				<input type="text">
 			</div>
-			
+
 			<div class="upload-image">
 				<label for="">1a. Provide an image that best represents your church</label>
 				<img src="" alt="">
@@ -34,7 +34,7 @@ step: 1
 					<input type="file">
 				</div>
 			</div>
-			
+
 			<div>
 				<div class="form-extend-info">
 					<i class="fa fa-question-circle"></i>
@@ -42,7 +42,7 @@ step: 1
 						Note: This is the “grunt test.”  A caveman should almost be able to grunt this out in less than thirty second.  Be clear - not cute and avoid any words that would be unfamiliar to someone who doesn’t go to your church.
 					</div>
 				</div>
-				<label for="">2. In a very short paragraph (like a tweet) that uses the simplest words possible try to describe the following three things: 
+				<label for="">2. In a very short paragraph (like a tweet) that uses the simplest words possible try to describe the following three things:
 					<ol>
 						<li>Who you are.</li>
 						<li>What you do.</li>
@@ -54,7 +54,7 @@ step: 1
 		</div> <!-- /.form -->
 		<div class="guide">
 				<h3>Need some help?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh ut augue eleifend varius. Vivamus facilisis massa non maximus lobortis. Ut vulputate faucibus erat, ut fermentum ipsum luctus quis. Quisque bibendum blandit lectus in volutpat. Nullam consequat posuere elementum. Aliquam ac risus libero. Integer at varius tellus. Proin mattis lobortis turpis tempor suscipit.</p>
+				<p>This messaging is some of the most important content on your entire site.  Please take your time and give these some serious thought.</p>
 		</div>
 	</div> <!-- /.wrapper -->
 </div> <!-- /.card-secundary.categories-->
@@ -66,7 +66,7 @@ step: 1
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>The Welcome Page</h2> 
+	<h2>The Welcome Page</h2>
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
