--- a/welcomePage-services.html
+++ b/welcomePage-services.html
@@ -18,7 +18,7 @@ step: 2
 						Note: Try to imagine being someone visiting your church for the first time.  Imagine visiting and knowing nothing about church culture.  What would they want to know?    Examples: https://www.lancasterbaptist.org/discover/new-to-lbc#visiting-lancaster-baptist, http://www.parksidechurch.com/visit/new-parkside/what-expect/
 					</div>
 				</div>
-				<label for="">3. What are your services like?  Describe them in one to four paragraphs.Description 
+				<label for="">3. What are your services like?  Describe them in one to four paragraphs.Description
 					<ol>
 						<li>Who you are.</li>
 						<li>What you do.</li>
@@ -42,7 +42,7 @@ step: 2
 		</div> <!-- /.form -->
 		<div class="guide">
 				<h3>Need some help?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh ut augue eleifend varius. Vivamus facilisis massa non maximus lobortis. Ut vulputate faucibus erat, ut fermentum ipsum luctus quis. Quisque bibendum blandit lectus in volutpat. Nullam consequat posuere elementum. Aliquam ac risus libero. Integer at varius tellus. Proin mattis lobortis turpis tempor suscipit.</p>
+				<p>Visiting a new church can be a scary experience, especially for people who are completely new to church or to your kind of church.  Use this section to give them some idea of what your church service will be like.</p>
 		</div>
 	</div> <!-- /.wrapper -->
 </div> <!-- /.card-secundary.categories-->
@@ -54,7 +54,7 @@ step: 2
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>The Welcome Page</h2> 
+	<h2>The Welcome Page</h2>
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
