--- a/welcomePage-location.html
+++ b/welcomePage-location.html
@@ -25,7 +25,7 @@ step: 5
 		</div> <!-- /.form -->
 		<div class="guide">
 				<h3>Need some help?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh ut augue eleifend varius. Vivamus facilisis massa non maximus lobortis. Ut vulputate faucibus erat, ut fermentum ipsum luctus quis. Quisque bibendum blandit lectus in volutpat. Nullam consequat posuere elementum. Aliquam ac risus libero. Integer at varius tellus. Proin mattis lobortis turpis tempor suscipit.</p>
+				<p>Don't assume people know how to get to your church.  Our church has been in the same place in our small town for 50 years and we still meet people every week who don't know where it is.</p>
 		</div>
 	</div> <!-- /.wrapper -->
 </div> <!-- /.card-secundary.categories-->
@@ -37,7 +37,7 @@ step: 5
 
 <section class="guide-module">
 	<button id="guide-module-close" class="close"><i class="fa fa-caret-down"></i></button>
-	<h2>The Welcome Page</h2> 
+	<h2>The Welcome Page</h2>
 	<div class="container">
 		<div class="column content">
 			<p>This is the most important page on your website.  It is a page specifically designed to turn vistors of your website into visitors of your church.  The page has two goals:</p>
